fix pop up size on small screen

--- a/src/Components/Illness/Illness.css
+++ b/src/Components/Illness/Illness.css
@@ -101,3 +101,10 @@
   margin: auto;
   background: white;
 }
+
+@media (max-width:500px) {
+  .popup_inner {
+    width: 84%;
+    left: 3%;
+  }
+}
